--- a/node/package.json
+++ b/node/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
