--- a/node/package.json
+++ b/node/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "http-server": "^14.1.1",
     "parcel": "^2.10.3"
   }
