--- a/node/package.json
+++ b/node/package.json
@@ -8,7 +8,8 @@
     "http": "http-server .",
     "dev": "parcel index.html",
     "build": "parcel build index.html",
-    "start": "http-server dist -c -1"
+    "start": "http-server dist -c -1",
+    "start:api": "json-server --watch db.json --port 3004"
   },
   "author": "Oskar ALX",
   "license": "ISC",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "http-server": "^14.1.1",
+    "json-server": "^0.17.4",
     "parcel": "^2.10.3"
   }
 }
